Descriptor for application

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,2 +1,7 @@
+#App Descriptor
+appTitle=Hello UI5 App
+appDescription= A simple app to learn sap ui5
+
+#Hello Panel
 showHelloButtonText=Say Hello btns
 helloMsg=Hello from he other side {0}
