--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,5 +3,9 @@ appTitle=Hello UI5 App
 appDescription= A simple app to learn sap ui5
 
 #Hello Panel
-showHelloButtonText=Say Hello btns
-helloMsg=Hello from he other side {0}
+showHelloButtonText=Say Hello
+helloMsg=Hello message {0}
+
+#Pages and Panel
+homePageTitle=UI5 Walkthrough
+helloPanelTitle=Hello UI5
