Dialogs and Fragments

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,4 @@ helloMsg=Hello message {0}
 #Pages and Panel
 homePageTitle=UI5 Walkthrough
 helloPanelTitle=Hello UI5
+openDialogButtonText=Open Dialog
