--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,3 +10,4 @@ helloMsg=Hello message {0}
 homePageTitle=UI5 Walkthrough
 helloPanelTitle=Hello UI5
 openDialogButtonText=Open Dialog
+closeDialogButtonText=Ok
