--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -11,3 +11,6 @@ homePageTitle=UI5 Walkthrough
 helloPanelTitle=Hello UI5
 openDialogButtonText=Open Dialog
 closeDialogButtonText=Ok
+
+#invoice list
+invoiceListTitle=Invoices
